<resources>
    <string name="app_name">LeetRead</string>
    <string name="socket_timeout_exception">Превышено время ожидания сервера</string>
    <string name="no_internet_connection">Нет интернет соединения</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="zheke_profile">Жеке профиль</string>
    <string name="profile">Профиль</string>
    <string name="zharystar">Жарыстар</string>
    <string name="kitaphana">Кітапхана</string>
    <string name="rating">Рейтинг</string>
    <string name="home_page_title">Басты бет</string>
    <string name="online">Онлайн</string>
    <string name="daily">Күндік</string>
    <string name="monthly">Айлық</string>
    <string name="weekly">Апталық</string>
    <string name="kitaphana_title">Кітапхана</string>
    <string name="kitap_title">Кітап туралы</string>
    <string name="class_">Сынып</string>
    <string name="school">Мектеп</string>
    <string name="country">Қазақстан</string>
    <string name="zhetistikter">Жетістіктер</string>
    <string name="statistics">Статистика</string>
    <string name="followers">Жазылушы</string>
    <string name="followeds">Жазылған</string>
    <string name="user_settings">Қосымша</string>
    <string name="change_password">Құпия сөзді ауыстыру</string>
    <string name="settings">Баптаулар</string>
    <string name="change_annual_goal">Жылдық мақсатты өзгерту</string>
    <string name="subscribe">Тіркелу</string>
    <string name="unsubscribe">Тіркелмеу</string>
    <string name="more">Толығырақ</string>
    <string name="progress">progress</string>
    <string name="oqu_progress">Оқу прогресі</string>
    <string name="read">Оқу</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Аккаунт</string>
    <string name="notifications">Хабарламалар</string>
    <string name="privacy">Құпиялылық</string>
    <string name="security">Қауіпсіздік</string>
    <string name="about_app">Бағдарлама туралы</string>
    <string name="faq">Жиі қойылатын сұрақтар</string>
    <string name="logout">Шығу</string>
    <string name="retry">Тағыда қайталап көру</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="read_page_edit_hint">0</string>
    <string name="read_page_done_btn">Енгізу</string>
    <string name="change_read_page_title">Оқылған бетті өзгерту</string>
    <string name="empty">Empty</string>
    <string name="see_all">Барлығын көру</string>
</resources>