<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/inner_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="20dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/background_color">

            <androidx.cardview.widget.CardView
                android:id="@+id/top_line"
                android:layout_width="100dp"
                android:layout_height="6dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/goodGrey"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/change_buttons_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@id/top_line">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/minus_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/minus"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/page_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="3"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:hint="@string/read_page_edit_hint"
                        android:textSize="20sp"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/plus_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/plus"
                        android:textSize="30sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="Жылдық мақсатты өзгерту"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/primaryColor"
                app:cardElevation="5dp"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/change_buttons_card_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>